--- a/public/index.html
+++ b/public/index.html
@@ -3,10 +3,9 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Document</title>
-	<script src="jquery/dist/jquery.min.js" ></script>
-	<script src="js/application.js" ></script>
+	<script src="assets/application.js"></script>
 </head>
 <body>
-	
+	<div id="test"></div>
 </body>
 </html>
